2025/Mycpp/.metadata/.plugins/org.eclipse.cdt.ui/ex.build.log
21:43:28 **** Incremental Build of configuration Debug for project ex ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex.o" "..\\src\\ex.cpp" 
..\src\ex.cpp: In constructor 'alu::alu()':
..\src\ex.cpp:18:35: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
 alu::alu(): r1{1}, r2{3}, oper{"+"}{
                                   ^
..\src\ex.cpp: In function 'int main()':
..\src\ex.cpp:25:20: error: 'int alu::r1' is private within this context
     cin >> machine.r1;
                    ^~
..\src\ex.cpp:11:6: note: declared private here
  int r1,r2;
      ^~
..\src\ex.cpp:26:21: error: 'int alu::r1' is private within this context
     cout << machine.r1;
                     ^~
..\src\ex.cpp:11:6: note: declared private here
  int r1,r2;
      ^~

21:43:28 Build Failed. 3 errors, 0 warnings. (took 241ms)

